objects/UNITY_Email_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Icon_URL_Accept__c</fullName>
        <label>Icon URL Accept</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Icon_URL_Reject__c</fullName>
        <label>Icon URL Reject</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Workflow_Email_Address__c</fullName>
        <description>From and Reply-To email address for automated workflow emails for UNITY Customization</description>
        <label>Workflow Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>UNITY Email Settings</label>
</CustomObject>